# powerinfer-server

./: .gitignore  .gitmodules  README.md  setup.cfg  setup.py
PIserver/: cli.py  client.py  constants.py  server.py  utils.py
PIserver/clients/: FileDownloadClient.py  FileTransClient.py  FileUploadClient.py  LLMClient.py  SSHClient.py  net.py
PIserver/commands/: README.md  __init__.py  clone.py  command.py  config.py  install.py  list.py  remove.py  run.py  upload.py
PIserver/powerinfer/: install.py
PIserver/utils/: SSHClient.py  csv.py  files.py  install.py  net.py
powerinfer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
powerinfer_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
