[metadata]
name = powerinfer-server
version = 0.1.0
author = ARL
author_email = aliceraylu0710@gmail.com
description = A local deployment tool for PowerInfer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AliceRayLu/powerinfer-server
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    fastapi>=0.68.0
    uvicorn>=0.15.0
    pathlib>=1.0.1
    paramiko>=2.11.0

[options.entry_points]
console_scripts =
    powerinfer = PIserver.client:main